--- a/css/variant.css
+++ b/css/variant.css
@@ -641,7 +641,7 @@ color: rgba(255, 255, 255, 0.6);
   color: #FFFFFF ;
   display: grid;
   place-items: center;
-  top: -30px !important;
+  bottom: -30px !important;
   right: 24px;
 }
 #products .product-price {
@@ -658,8 +658,8 @@ color: rgba(255, 255, 255, 0.6);
   color: #FFFFFF ;
   display: grid;
   place-items: center;
-  top: 50px !important;
-  left: 119px;
+  bottom: -30px !important;
+  right: 24px;
 }
 [data-aos][data-aos][data-aos-delay="100"].aos-animate, body[data-aos-delay="100"] [data-aos].aos-animate {
   transition-delay: .1s;
